[package]
name = "rinites"
version = "0.1.0"
authors = ["csrene <renecoutoesilva@gmail.com>"]
edition = "2018"
default-run = "rinites_tcp"

[dependencies]
base64 = "0.2.1"
structopt = "0.3"
actix-web = "2.0.0-rc"
actix-rt = "1.0.0"

futures = "0.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
rand = "0.7.2"
failure = "0.1.3"